fixed overflow x

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   font-size: 14px !important;
+  box-sizing: border-box;
+  overflow-x: hidden
 }
 .navbar-brand {
   font-size: 14px !important;
@@ -19,7 +21,7 @@ body {
 
 }
 .name-and-email{
- padding-right: 140px;
+ /* padding-right: 140px; */
 }
 #sendBtn:hover{
   background-color: #454357;
